feat: api crud cinema
